else function on the counter deleted

--- a/MapApplication_Java_Firestore/app/src/main/res/layout/activity_maps.xml
+++ b/MapApplication_Java_Firestore/app/src/main/res/layout/activity_maps.xml
@@ -76,6 +76,7 @@
         android:onClick="UpdateButton"
         android:text="Add Location"
         android:textColor="@android:color/white"
-        android:textSize="14dp" />
+        android:textSize="14dp"
+        android:hint="Type Something Here..."/>
 
 </LinearLayout>
