--- a/MapApplication2/app/src/debug/res/values/google_maps_api.xml
+++ b/MapApplication2/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB-sJxPgjpKpbx_cEds3hZTWU2ZSrhGtDk</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Your API KEY GOES HERE</string>
 </resources>
