--- a/MapApplication_Java_Firestore/app/src/debug/res/values/google_maps_api.xml
+++ b/MapApplication_Java_Firestore/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDkPp8HgbDur_iX4JJJWkEhJex7I8MBWAw</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR API KEY GOES HERE</string>
 </resources>
